--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bower": "^1.8.14",
     "cookie-parser": "~1.4.4",
     "crypto-js": "^4.2.0",
+    "csrf-sync": "^4.0.3",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
